Add audio content support
Signed-off-by: andreadimaio <dmaio.andrea@gmail.com>