@@ -7,6 +7,7 @@ package com.ibm.watsonx.ai.chat.model;
 import static java.util.Objects.requireNonNull;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.Base64;
@@ -34,53 +35,44 @@ public record ImageContent(String type, Image imageUrl) implements UserContent {
     }
 
     /**
-     * Creates an {@code ImageContent} from a {@link File}.
+     * Creates an {@code ImageContent} from a file.
      *
-     * @param file the image file to load
-     * @return a new {@code ImageContent}
-     * @throws IOException if the file cannot be read
+     * @param file the image file to read
+     * @return a new {@code ImageContent} instance
+     * @throws IOException if an I/O error occurs reading from the file
      */
     public static ImageContent from(File file) throws IOException {
-        return from(file, null);
+        requireNonNull(file);
+        return from(file.toPath());
     }
 
     /**
-     * Creates an {@code ImageContent} from a {@link File}, with a specified detail level.
-     *
-     * @param file the image file to load
-     * @param detail the level of detail for how the model should process the image
-     * @return a new {@code ImageContent}
-     * @throws IOException if the file cannot be read
-     */
-    public static ImageContent from(File file, Detail detail) throws IOException {
-        return from(file.toPath(), detail);
-    }
-
-    /**
-     * Creates an {@code ImageContent} from a file {@link Path}.
+     * Creates an {@code ImageContent} from a file path.
      *
      * @param path the path to the image file
-     * @return a new {@code ImageContent}
-     * @throws IOException if the file cannot be read
+     * @return a new {@code ImageContent} instance
+     * @throws IOException if an I/O error occurs reading from the file
      */
     public static ImageContent from(Path path) throws IOException {
-        return from(path, null);
+        requireNonNull(path);
+        var mimetype = Files.probeContentType(path);
+        try (var is = Files.newInputStream(path)) {
+            return from(is, mimetype);
+        }
     }
 
     /**
-     * Creates an {@code ImageContent} from a file {@link Path}, with a specified detail level.
+     * Creates an {@code ImageContent} from an input stream.
      *
-     * @param path the path to the image file
-     * @param detail the level of detail for how the model should process the image
-     * @return a new {@code ImageContent}
-     * @throws IOException if the file cannot be read
+     * @param is the input stream containing the image data
+     * @param mimetype the MIME type of the image (e.g., {@code image/png}, {@code image/jpeg})
+     * @return a new {@code ImageContent} instance
+     * @throws IOException if an I/O error occurs reading from the stream
      */
-    public static ImageContent from(Path path, Detail detail) throws IOException {
-        requireNonNull(path);
-        var bytes = Files.readAllBytes(path);
-        var mimeType = Files.probeContentType(path);
-        var base64Data = Base64.getEncoder().encodeToString(bytes);
-        return of(Image.of(mimeType, base64Data));
+    public static ImageContent from(InputStream is, String mimetype) throws IOException {
+        requireNonNull(is);
+        var data = Base64.getEncoder().encodeToString(is.readAllBytes());
+        return of(mimetype, data);
     }
 
     /**
